Add backend tests.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -47,6 +47,12 @@
 			<artifactId>gtfs-realtime-bindings</artifactId>
 			<version>0.0.8</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webmvc-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
